# Amortized_Quantum_Messaging

./: .gitignore  CLAUDE.md  README.md  __init__.py  config.py  connections.py  demo.py  errors.py  types.py  vault.py
AQM_Database/: connection.py  enviroment.yml  errors.py  garbage_collector.py  inventory.py  prototype.py  vault.py
AQM_Database/aqm_db/: connection.py
AQM_Database/aqm_db/tests/: test_inventory.py
AQM_Database/aqm_shared/: config.py  context_manager.py  crypto_engine.py
AQM_Database/aqm_shared/tests/: test_crypto_engine.py
AQM_Database/chat/: benchmark.py  cli.py  protocol.py  session.py  transport.py
AQM_Database/chat/tests/: conftest.py  test_benchmark.py  test_protocol.py  test_session.py
codes/: CMakeLists.txt
codes/src/client_module/: client_main.cpp
codes/src/common/: common.h
codes/src/crypto/: crypto_engine.cpp  crypto_engine.h
codes/src/logic_modules/: contact_manager.h  context_manager.h  inventory_manager.h
codes/src/server_module/: server_main.cpp
